--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "autoprefixer": "^10.2.1",
     "next": "10.0.5",
     "postcss": "^8.2.4",
-    "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-speech-recognition": "^3.6.0",
+    "regenerator-runtime": "^0.13.7",
     "tailwind-nord": "^1.2.0",
     "tailwindcss": "^2.0.2",
     "tailwindcss-debug-screens": "^2.0.0",
