--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "tcv": "npx tailwind-config-viewer"
+    "tcv": "npx tailwind-config-viewer",
+    "postbuild": "next-on-netlify"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.2.1",
     "next": "10.0.5",
+    "next-on-netlify": "^2.8.4",
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
