--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.2.1",
     "next": "10.0.5",
+    "next-i18next": "^7.0.1",
     "next-on-netlify": "^2.8.4",
     "postcss": "^8.2.4",
     "react": "17.0.1",
