--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-on-netlify": "^2.8.4",
     "postcss": "^8.2.4",
     "react": "17.0.1",
+    "react-audio-player": "^0.14.0",
     "react-dom": "17.0.1",
     "react-router-dom": "^5.2.0",
     "react-speech-recognition": "^3.6.0",
