--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@tailwindcss/forms": "^0.2.1",
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.2.1",
     "next": "10.0.5",
     "next-i18next": "^7.0.1",
