--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.2.1",
     "next": "10.0.5",
-    "next-i18next": "^7.0.1",
     "next-on-netlify": "^2.8.4",
     "postcss": "^8.2.4",
+    "postcss-import": "^14.0.0",
+    "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
     "react-audio-player": "^0.14.0",
     "react-dom": "17.0.1",
