--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.2.1",
     "next": "10.0.5",
     "next-on-netlify": "^2.8.4",
+    "next-translate": "^1.0.2",
     "postcss": "^8.2.4",
     "postcss-import": "^14.0.0",
     "postcss-preset-env": "^6.7.0",
