--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "tcv": "npx tailwind-config-viewer"
   },
@@ -30,5 +30,8 @@
     "tailwindcss-debug-screens": "^2.0.0",
     "tailwindcss-elevation": "^1.0.1",
     "tailwindcss-typography": "^3.1.0"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^1.1.1"
   }
 }
