--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.1",
     "react-audio-player": "^0.14.0",
     "react-dom": "17.0.1",
+    "react-jinke-music-player": "^4.21.2",
     "react-router-dom": "^5.2.0",
     "react-speech-recognition": "^3.6.0",
     "regenerator-runtime": "^0.13.7",
