--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "autoprefixer": "^10.2.1",
     "axios": "^0.21.1",
     "next": "10.0.5",
-    "next-on-netlify": "^2.8.4",
     "next-translate": "^1.0.2",
     "postcss": "^8.2.4",
     "postcss-import": "^14.0.0",
@@ -32,6 +31,7 @@
     "tailwindcss": "^2.0.2",
     "tailwindcss-debug-screens": "^2.0.0",
     "tailwindcss-elevation": "^1.0.1",
-    "tailwindcss-typography": "^3.1.0"
+    "tailwindcss-typography": "^3.1.0",
+    "use-dencrypt-effect": "^1.0.2"
   }
 }
