--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-audio-player": "^0.14.0",
     "react-dom": "17.0.1",
     "react-jinke-music-player": "^4.21.2",
+    "react-parallax-tilt": "^1.4.81",
     "react-router-dom": "^5.2.0",
     "react-speech-recognition": "^3.6.0",
     "regenerator-runtime": "^0.13.7",
