--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "tcv": "npx tailwind-config-viewer",
-    "..": "yarn && yarn dev"
+    "..": "yarn && yarn dev",
+    "build-css": "postcss styles/globals.css -o compiled.css"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
@@ -19,6 +20,7 @@
     "next-translate": "^1.0.2",
     "postcss": "^8.2.4",
     "postcss-import": "^14.0.0",
+    "postcss-nested": "^5.0.3",
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
     "react-audio-player": "^0.14.0",
@@ -32,7 +34,7 @@
     "tailwindcss": "^2.0.2",
     "tailwindcss-debug-screens": "^2.0.0",
     "tailwindcss-elevation": "^1.0.1",
-    "tailwindcss-typography": "^3.1.0",
-    "use-dencrypt-effect": "^1.0.2"
+    "tailwindcss-hero-patterns": "^0.0.1",
+    "tailwindcss-typography": "^3.1.0"
   }
 }
