--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "tailwindcss-debug-screens": "^2.0.0",
     "tailwindcss-elevation": "^1.0.1",
     "tailwindcss-hero-patterns": "^0.0.1",
-    "tailwindcss-typography": "^3.1.0"
+    "tailwindcss-typography": "^3.1.0",
+    "use-dencrypt-effect": "^1.0.2"
   }
 }
