--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.2.1",
     "axios": "^0.21.1",
+    "framer-motion": "^3.6.2",
     "next": "10.0.5",
     "next-translate": "^1.0.2",
     "postcss": "^8.2.4",
